// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AsyncSelect Multiselect 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Countries
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            class="Select css-2b097c-container"
          >
            <div
              data-testid="select-control"
            >
              <div
                class="SelectTest__control css-16f1mi0-Control"
              >
                <div
                  class="SelectTest__value-container SelectTest__value-container--is-multi css-1n6k1w3-ValueContainer"
                >
                  <div
                    class="SelectTest__placeholder css-1n91s4n-placeholder"
                  >
                    Please select a countries
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      class="css-17yls17-Input"
                    >
                      <div
                        class="SelectTest__input"
                        style="display:inline-block"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-5-input"
                          spellcheck="false"
                          style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="SelectTest__indicators css-173cxbq-IndicatorsContainer"
                >
                  <span
                    class="SelectTest__indicator-separator css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="SelectTest__indicator SelectTest__dropdown-indicator css-19phze7-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsyncSelect With a default value 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Country
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            class="Select css-2b097c-container"
          >
            <div
              data-testid="select-control"
            >
              <div
                class="SelectTest__control css-16f1mi0-Control"
              >
                <div
                  class="SelectTest__value-container css-1n6k1w3-ValueContainer"
                >
                  <div
                    data-testid="select-input"
                  >
                    <div
                      class="css-17yls17-Input"
                    >
                      <div
                        class="SelectTest__input"
                        style="display:inline-block"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-4-input"
                          spellcheck="false"
                          style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                          tabindex="0"
                          type="text"
                          value="Can"
                        />
                        <div
                          style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                        >
                          Can
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="SelectTest__indicators css-173cxbq-IndicatorsContainer"
                >
                  <span
                    class="SelectTest__indicator-separator css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="SelectTest__indicator SelectTest__dropdown-indicator css-19phze7-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsyncSelect With default options 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Country
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            class="Select css-2b097c-container"
          >
            <div
              data-testid="select-control"
            >
              <div
                class="SelectTest__control css-16f1mi0-Control"
              >
                <div
                  class="SelectTest__value-container css-1n6k1w3-ValueContainer"
                >
                  <div
                    class="SelectTest__placeholder css-1n91s4n-placeholder"
                  >
                    Filter Countries
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      class="css-17yls17-Input"
                    >
                      <div
                        class="SelectTest__input"
                        style="display:inline-block"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-3-input"
                          spellcheck="false"
                          style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="SelectTest__indicators css-173cxbq-IndicatorsContainer"
                >
                  <span
                    class="SelectTest__indicator-separator css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="SelectTest__indicator SelectTest__dropdown-indicator css-19phze7-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsyncSelect default 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Country
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            class="Select css-2b097c-container"
          >
            <div
              data-testid="select-control"
            >
              <div
                class="SelectTest__control css-16f1mi0-Control"
              >
                <div
                  class="SelectTest__value-container css-1n6k1w3-ValueContainer"
                >
                  <div
                    class="SelectTest__placeholder css-1n91s4n-placeholder"
                  >
                    Please select a country
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      class="css-17yls17-Input"
                    >
                      <div
                        class="SelectTest__input"
                        style="display:inline-block"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-2-input"
                          spellcheck="false"
                          style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="SelectTest__indicators css-173cxbq-IndicatorsContainer"
                >
                  <span
                    class="SelectTest__indicator-separator css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="SelectTest__indicator SelectTest__dropdown-indicator css-19phze7-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
